Fri Jan 11 14:58:10 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* ROADMAP: Updated mudconnect

	* po/POTFILES.in: Added mudlist.c
	* po/*.po: Updated translations.

	* src/gnome-mud.h [system_data]: Added MudListFile.
	(window_mudlist): Added.
	
	* src/init.c [file_menu]: Added MudList to menu.

	* src/mudlist.c: Added.

	* src/prefs.c (load_prefs): Added MudListFile preference.
	(save_prefs): Ditto.
	(copy_preferences): Ditto.
	(prefs_entry_mudlistfile_cb): Added callback.
	(window_prefs): Added gnomefileentry for mudlist file.

Wed Jan  9 01:27:37 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* po/{ca,es}.po: Updated translations.

Tue Jan  8 14:13:09 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* The year is now 2002, and a lot of files were updated.

	* po/*.po: Updated.

Tue Jan  8 09:31:31 CET 2002  Robin Ericsson  <lobbin@localhost.nu>

	* Added patch from Petter E. Stokke that enables pythons
	scripting support.

	* ROADMAP: Moved pythonsupport to done section.

	* AUTHORS: Added Petter E. Stokke

	* po/*.po: make update-po

Sat Jan  5 02:51:40 CET 2002  Jordi Mallach  <jordi@debian.org>

	* gnome-mud.1: renaming leftovers.

Mon Dec 10 12:26:40 CET 2001  Robin Ericsson  <lobbin@localhost.nu>

	* ROADMAP: Added some more.

	* src/gnome-mud.c (main): Changed formatting, and readded init
	for modules.

	* src/profiles.c: Removed a global variable.

Tue Nov 27 18:33:07 CET 2001  Robin Ericsson  <lobbin@localhost.nu>

	* README: Copied changed from BRANCH_0_8.

	* ROADMAP: Added.

	* src/net.c (check_aliases): Added to be able to do nested
	aliases.
	(action_sent_to_connection): Now calls check_aliases instead
	of check_alias.

Fri Nov 23 15:23:17 CET 2001  Robin Ericsson  <lobbin@localhost.nu>

	* Makefile.am: PLUGIN.API should be distributed in "HEAD" CVS
	aswell as BRANCH_0_8.

	* ROADMAP: Added double entry for easier NEWS catchup :)

	* src/profiles.c (connections_button_press_cb): Added function
	to trap doubleclick events.